syntax = "proto3";

option go_package = "./proto/v1";

message MemoryInfo {
  double total = 1;
  double used = 2;
  double free = 3;
  double used_percent = 4;
}

message DiskInfo {
  double total = 1;
  double used = 2;
  double free = 3;
  double used_percent = 4;
}

message Step {
  string name = 1;
  string image = 2;
  repeated string commands = 3;
}

message Pipeline {
  string kind = 1;
  string type = 2;
  string name = 3;
  repeated Step steps = 4;
}

enum PipelineLogType {
  LOG = 0;
  STEP = 1;
  ERROR = 2;
  DONE = 3;
}

message PipelineInstanceLog {
  string pipeline_instance_id = 1;
  PipelineLogType type = 2;
  string step_name = 3;
  string cmd = 4;
  string result = 5;
  int64 timestamp = 6;
  int64 duration = 7;
}